# FlashReduce-dev

./: .gitignore  CMakeLists.txt  README.md
controller/: controller.py  controller_.py  flashreduce_pb2.py  flashreduce_pb2_grpc.py
csrc/: common.h  flashreduce.grpc.pb.cc  flashreduce.grpc.pb.h  flashreduce.pb.cc  flashreduce.pb.h  get_clock.h  grpc_client.cc  grpc_client.h  proxy.cc  proxy.h  rdma_utils.cc  rdma_utils.h  socket_endpoint.cc  socket_endpoint.h
examples/: CMakeLists.txt  grpc_barrier_test.cc  grpc_test.cc  proxy_send_recv.cc  proxy_test.cc  rdma_write_rc_test.cc  rdma_write_uc_test.cc
proto/: Makefile  flashreduce.proto
